# PreTradeParser

./: .gitignore  CMakeLists.txt  README.md
app/: CMakelists.txt  main.cpp
include/: errorlog.hpp  scanner.hpp
src/: CMakeLists.txt  errorlog.cpp  scanner.cpp
tests/: CMakeLists.txt  testmain.cpp
tests/testfiles/: duplicateSecRef.txt  secRefWithBuys.txt  securityReference.txt  simpleSecRef.txt
